# cgraph

./: AGENTS.md  README.md  pyproject.toml
cgraph/: __init__.py  cli.py  git.py  observe.py  store.py
cgraph/schemas/: context-meta.schema.json  observation-index.schema.json
examples/minimal/: README.md
examples/minimal/memory/archive/branch/2026-02-03-001305-example-branch/: content.md  meta.json
examples/minimal/memory/canon/2026-02-03-001309-example-summary/: content.md  meta.json
examples/minimal/memory/root/root/: content.md  meta.json
memory/_ops/handoff/: 2026-02-02-161513-gate-a-implementation.md
memory/summary/: 2026-02-02-161520-zephyr-phase-1-gate-a.md  2026-02-05-125748-cgraph-phase-2-observation-surfaces.md
tests/: test_observe.py  test_schemas.py
