[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cgraph"
version = "0.1.0"
description = "CGraph kernel CLI"
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
cgraph = "cgraph.cli:main"

[tool.setuptools]
packages = ["cgraph"]
